fixtures/typescript/test_double/should_fail/runtime_test_support_import.tsx
import { fakeUser } from "../tests/helpers/fake-user";

export const userCard = <div>{fakeUser.id}</div>;
